--- a/style.css
+++ b/style.css
@@ -9,9 +9,25 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 93.75%; /* 15px */
+}
+
 body {
   background: #f0f2f5;
   font-family: 'Poppins', sans-serif;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 .container {
@@ -27,6 +43,21 @@ h2 {
   color: var(--dark-blue);
 
   font-weight: 400;
+}
+
+/* |=|=|=|=|= Links and Buttons |=|=|=|=|= */
+a {
+  color: #49AA26;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #3dd705;
+}
+
+.button.new {
+  display: inline-block;
+  margin-bottom: .8rem;
 }
 
 /* |=|=|=|=|= Header |=|=|=|=|=*/
@@ -51,7 +82,7 @@ header {
   margin-top: 0;
 }
 
-/* |=|=|=|=|= Balance |=|=|=|=|=*/
+/* |=|=|=|=|= Cards |=|=|=|=|=*/
 .card {
   background: #ffffff;
   padding: 1.5rem 2rem;
@@ -65,6 +96,10 @@ header {
 .card h3 {
   font-weight: normal;
   font-size: 1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card p {
@@ -80,15 +115,27 @@ header {
 }
 
 /* |=|=|=|=|= Table |=|=|=|=|=*/
+#transaction {
+  display: block;
+  width: 100%;
+  overflow-x: auto;
+}
+
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
   color: #969cb3;
+
 }
 
 #data-table thead tr th:first-child,
 #data-table tbody tr td:first-child {
   border-radius: 0.35rem 0 0 0.35rem;
+}
+
+#data-table thead tr th:last-child,
+#data-table tbody tr td:last-child {
+  border-radius: 0 0.35rem 0.35rem 0;
 }
 
 #data-table thead th {
@@ -126,6 +173,35 @@ td.expense {
   color: #e92929;
 }
 
+/* |=|=|=|=|= Modal |=|=|=|=|=*/
+.modal-overlay {
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.7);
+
+  position: fixed;
+  top: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* opacity: 0;
+  visibility: hidden; */
+}
+
+.modal-overlay active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background: #F0F2F5;
+  padding: 2.4rem;
+}
+
+
 /* |=|=|=|=|= Footer |=|=|=|=|=*/
 footer {
   text-align: center;
@@ -133,4 +209,17 @@ footer {
   color: var(--dark-blue);
 
   opacity: 0.6;
+}
+
+/* |=|=|=|=|= Responsive |=|=|=|=|=*/
+@media (min-width: 780px) {
+  html {
+    font-size: 87.5%; /* 14px */
+  }
+
+  #balance {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
 }
