--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 /* |=|=|=|=|= Global |=|=|=|=|= */
 :root {
-  --dark-blue: #363f5f;
-  --green: #49AA26;
-  --light-green: #3dd705;
+  --dark-blue: #3f4b74;
+  --green: #49aa26;
+  --light-green: #62dd2c;
   --red: #e92929;
+  --bg-white: #f0f2f5;
+  --white: #ffffff;
+  --kkk: #313131;
 }
 
 * {
@@ -17,7 +20,7 @@ html {
 }
 
 body {
-  background: #f0f2f5;
+  background: var(--bg-white);
   font-family: 'Poppins', sans-serif;
 }
 
@@ -64,8 +67,8 @@ button {
 
   border: none;
 
-  color: white;
-  background: var(--green);
+  color: #ffffff;
+  background: var(--light-green);
 
   border-radius: 0.35rem;
 
@@ -124,7 +127,7 @@ header {
 
 /* |=|=|=|=|= Cards |=|=|=|=|=*/
 .card {
-  background: #ffffff;
+  background: var(--white);
   padding: 1.5rem 2rem;
   border-radius: 0.25rem;
 
@@ -151,7 +154,7 @@ header {
 
 .card.total {
   background: var(--green);
-  color: #ffffff;
+  color: var(--bg-white);
 }
 
 /* |=|=|=|=|= Table |=|=|=|=|=*/
@@ -164,7 +167,7 @@ header {
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
-  color: #969cb3;
+  color: var(--dark-blue);
 
 }
 
@@ -179,7 +182,7 @@ header {
 }
 
 #data-table thead th {
-  background: #ffffff;
+  background: var(--white);
 
   font-weight: normal;
   padding: 1rem 2rem;
@@ -196,7 +199,7 @@ header {
 }
 
 #data-table td {
-  background: #ffffff;
+  background: var(--white);
 
   padding: 1rem 2rem;
 }
@@ -242,7 +245,7 @@ td.expense {
   position: relative;
   z-index: 1;
 
-  background: #F0F2F5;
+  background: var(--bg-white);
   padding: 2.4rem;
   border-radius: 0.35rem;
 }
@@ -271,6 +274,7 @@ input {
 
 .input-group .help {
   opacity: 0.4;
+  color: var(--dark-blue);
 }
 
 .input-group.actions {
@@ -291,6 +295,56 @@ footer {
   color: var(--dark-blue);
 
   opacity: 0.6;
+}
+
+/* |=|=|=|=|= Dark Mode |=|=|=|=|=*/
+
+.toggle {
+  position: absolute;
+  top: 2em;
+  right: 1.5em;
+}
+
+input[type=checkbox] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 52px;
+  height: 27px;
+  background-color: #49aa26;
+  float: right;
+  border-radius: 100px;
+  position: relative;
+}
+
+label::after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 20px;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 90px;
+  transition: 0.2s;
+}
+
+input:checked + label {
+  background-color: var(--light-green);
+}
+
+input:checked + label::after {
+  left: calc(100% - 5px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 45px;
 }
 
 /* |=|=|=|=|= Responsive |=|=|=|=|=*/
